# FP2

./: .gitignore  CMakeLists.txt  README.md  constexpr_math.hpp  define_graph.hpp
cmake/: profile_clang.cmake  run_conan.cmake
dependencies/: conanfile.txt
imperative/: A_star.hpp  CMakeLists.txt  common.hpp  cost_function.hpp  graph.hpp  main.cpp
metaprogram/: CMakeLists.txt  common.hpp  functional.hpp  main.cpp  metafunctional.hpp  type_string.hpp
metaprogram/A_star/: A_star.hpp  heuristic.hpp  kv_pair.hpp  node_score.hpp
metaprogram/graph/: flattened_graph.hpp  flattener.hpp  recursive_graph.hpp
metaprogram/pack/: pack.hpp  pack_helpers.hpp
semifunctional/: A_star.hpp  CMakeLists.txt  common.hpp  functional.hpp  graph.hpp  main.cpp
semifunctional/container/: static_ordered_list.hpp  static_vector.hpp
semifunctional/monad/: either.hpp  maybe.hpp
